<resources>
    <string name="app_name" translatable="false">11Settings</string>
    <string name="action_settings">Настройки</string>
    <string name="title_name">Это приложение, в котором можно менять тему и язык</string>
    <string name="ru">Русский</string>
    <string name="en">Английский</string>
    <string name="choose_lang">Выберите язык</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="light">Светлая тема</string>
    <string name="dark">Тёмная тема</string>
    <string name="save">Сохранить</string>
</resources>